Fix: ESLint errors

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "dist/index.js",
   "typings": "src/index.ts",
   "scripts": {
-    "t": "npm run mocha -- src/*.spec.ts",
-    "test": "npm run eslint && npm run tscheck && npm run t",
+    "test": "npm run eslint && npm run tscheck && npm run test:r",
     "test:r": "npm run mocha -- src/*.spec.ts",
     "mocha": "node -r ts-node/register/transpile-only node_modules/mocha/bin/_mocha",
     "test:w": "npm run mocha -- --watch-extensions ts --watch src/**/*.spec.ts",
