--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "clean": "rimraf dist",
     "commit": "git-cz"
   },
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^1.9.3"
+  },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.0",
     "@semantic-release/git": "^7.0.2",
