--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
+    "importHelpers": true,
     "declaration": false,
     "outDir": "dist",
     "removeComments": false,
+    "strict": true,
     "sourceMap": true,
     "lib": [
       "esnext"
