--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,13 @@
     "declaration": false,
     "outDir": "dist",
     "removeComments": false,
-    "strict": true,
+    "noImplicitReturns": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
     "sourceMap": true,
     "lib": [
       "esnext"
