--- a/package.json
+++ b/package.json
@@ -31,19 +31,21 @@
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.0",
-    "@semantic-release/git": "^7.0.2",
-    "@semantic-release/npm": "^5.0.2",
+    "@semantic-release/git": "^7.0.3",
+    "@semantic-release/npm": "^5.0.4",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.9.1",
+    "@types/mock-fs": "^3.6.30",
+    "@types/node": "^10.9.3",
     "chokidar-cli": "^1.2.0",
     "eslint": "^5.4.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-typescript": "^0.12.0",
     "eslint-plugin-unicorn": "^6.0.0",
     "mocha": "^5.2.0",
+    "mock-fs": "^4.6.0",
     "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2",
-    "semantic-release": "^15.9.9",
+    "semantic-release": "^15.9.12",
     "ts-node": "^7.0.1",
     "typescript": "^2.9.2",
     "typescript-eslint-parser": "^16.0.1"
